--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
+    <div class="top-container"><a href="#heading" id="top">^</a></div>
     <button id="openn">
         <div class="line"></div>
         <div class="line"></div>
