--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
+    <div class="top-container"><a href="#heading" id="top">^</a></div>
     <button id="openn">
         <div class="line"></div>
         <div class="line"></div>
